--- a/r4ews.css
+++ b/r4ews.css
@@ -64,10 +64,13 @@ pre code {
     overflow: hidden;
     padding: 20px;
     width: 100%;
+    font-size: 1.1em; 
+
 }
 
 .content-box-blue {
     background-color: #0065BD;
+     color: #FFFFFF;
 
 }
 
@@ -85,6 +88,7 @@ pre code {
 
 .content-box-green {
 	background-color: #A2AD00;
+	 color: #FFFFFF;
 }
 
 .content-box-purple {
@@ -101,6 +105,7 @@ pre code {
 
 .content-box-orange {
 	background-color: #E37222;
+	 color: #FFFFFF;
 }
 
 
