--- a/r4ews.css
+++ b/r4ews.css
@@ -57,6 +57,7 @@ pre code {
 .content-box-green,
 .content-box-purple,
 .content-box-red,
+.content-box-black,
 .content-box-orange,
 .content-box-yellow {
     border-radius: 15px;
@@ -65,6 +66,12 @@ pre code {
     padding: 20px;
     width: 100%;
     font-size: 1.1em; 
+
+}
+
+.content-box-black {
+    background-color: #0a0a0a;
+     color: #FFFFFF;
 
 }
 
